Revert "Merge branch 'integrate-rag-viz'"
This reverts commit 5b8100fb5331784030f15a4c30c59c2d86c8ff3d, reversing
changes made to 47bd7f4f88e83dffb951ff5af1ab16947c0d4080.
