# contracts/__init__.py
@@ -15,13 +15,10 @@ from contracts.models import (
     GenerateQuestionRequest,
     GenerateQuestionResponse,
     HealthResponse,
-    LearningResource,
     MasteryResponse,
     Persona,
     PowerStatus,
     ReadyResponse,
-    ResourceCitation,
-    ResourceList,
     Subject,
     TutoringMode,
     UserSettings,
@@ -34,17 +31,14 @@ __all__ = [
     "ChatResponse",
     "DiagnoseRequest",
     "DiagnoseResponse",
+    "GeneratedQuestion",
     "GenerateQuestionRequest",
     "GenerateQuestionResponse",
-    "GeneratedQuestion",
     "HealthResponse",
-    "LearningResource",
     "MasteryResponse",
     "Persona",
     "PowerStatus",
     "ReadyResponse",
-    "ResourceCitation",
-    "ResourceList",
     "Subject",
     "TutoringMode",
     "UserSettings",
